# dossier

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
mcp-server/: README.md  pyproject.toml  server.py  test_server.py
scripts/: validate_workflow.py
test/: lint.sh
utils/: generate_readme.py  validate_workflow.py
utils/tests/: test_validate_workflow.py
workflows/: README.md  create-workflow.ds.md  workflow-schema.json
workflows/development/: README.md  api-compatibility-check.ds.md  architecture-patterns.ds.md  config-schema-check.ds.md  dependency-capability-check.ds.md  test-coverage-gap-analysis.ds.md
workflows/documentation/: README.md  onboarding-friction.ds.md  readme-reality-check.ds.md
workflows/setup/: README.md  validate-project-config.ds.md
